Initial build update + move streaming classes